--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,6 @@
 
+active.users.title = currently logged in users
+
 administration.createEmMatches               = create matches of EM 2016
 administration.demoBetsAllUsers              = create demo bets for all users
 administration.msg.info.deleteOldActiveUsers = Active users with login date older than 30 minutes has been deleted!
@@ -146,6 +148,7 @@ msg.match.updated                      = The match {0} vs {1} has been updated!
 msg.negative.values.not.allowed        = Negative values are not allowed!
 msg.user.profile.info.passwordChanged  = Password changed successfully!
 
+navigation.activeUserList    = logged in users
 navigation.administration    = Administration
 navigation.betting           = Betting
 navigation.betting.extraBets = bonus bets
