--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -127,8 +127,8 @@ matchresult.heading = Ergebnis eintragen
 
 msg.ROLE_ADMIN                         = Admin Benutzer
 msg.ROLE_USER                          = normaler Benutzer
-msg.ROLE_USER_ENTER_RESULTS            = n. B. mit Eingabe Ergebnisse
-msg.ROLE_USER_ENTER_RESULTS_ADD_USERS  = n. B. mit Eingabe Ergeb. und Benutzeradm.
+msg.ROLE_USER_ENTER_RESULTS            = + Eingabe Ergebnisse
+msg.ROLE_USER_ENTER_RESULTS_ADD_USERS  = + Eingabe Ergeb. und Benutzeradm.
 msg.bet.betting.created                = Tipp gespeichert!
 msg.bet.betting.error.empty            = Bitte geben Sie Ihren Tipp ein!
 msg.bet.betting.error.matchInProgress  = Das Spiel hat bereits begonnen! Keine Tippabgabe mehr m\u00F6glich!
