added misc page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -97,6 +97,7 @@ group.title.semiFinal        = Halbfinale
 groups = Gruppen
 
 info.edit.title         = Info editieren
+info.misc.edit.button   = Sonstiges editieren
 info.msg.edit.saved     = Infos editiert!
 info.prices.edit.button = Preise editieren
 info.rules.edit.button  = Regeln editieren
@@ -124,6 +125,8 @@ matches.list.result        = Ergebnis
 matches.matchresult.title  = Matchergebnis editieren
 
 matchresult.heading = Ergebnis eintragen
+
+misc.title = Sonstiges
 
 msg.ROLE_ADMIN                         = Admin Benutzer
 msg.ROLE_USER                          = normaler Benutzer
