--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,6 +97,7 @@ group.title.semiFinal        = Semi Final
 groups = Groups
 
 info.edit.title         = edit info
+info.misc.edit.button   = edit miscellaneous
 info.msg.edit.saved     = infos edited!
 info.prices.edit.button = edit winnings
 info.rules.edit.button  = edit rules
@@ -124,6 +125,8 @@ matches.list.result        = result
 matches.matchresult.title  = enter match result
 
 matchresult.heading = Enter result
+
+misc.title = miscellaneous
 
 msg.ROLE_ADMIN                         = Admin user
 msg.ROLE_USER                          = standard user
