--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -174,6 +174,8 @@ ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 
 rules.title = Regeln
 
+statistics.title = Statistik
+
 upcoming.matches = anstehende Spiele
 
 user.changePassword.newPassword              = Bitte geben Sie das neue Passwort ein!
