--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -174,6 +174,8 @@ ranking.noRankings = No bets assigned!
 
 rules.title = Rules
 
+statistics.title = Statistic
+
 upcoming.matches = Upcoming Matches
 
 user.changePassword.newPassword              = Please enter a new password!
