added msg on empty statistics

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -150,6 +150,7 @@ msg.match.deleted                      = The match {0} vs {1} has been deleted!
 msg.match.updated                      = The match {0} vs {1} has been updated!
 msg.negative.values.not.allowed        = Negative values are not allowed!
 msg.user.profile.info.passwordChanged  = Password changed successfully!
+msg.warn.no.statistics                 = There are no statistics by now!
 
 navigation.activeUserList    = logged in users
 navigation.administration    = Administration
