--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -150,6 +150,7 @@ msg.match.deleted                      = Das Spiel {0} gegen {1} wurde gel\u00F6
 msg.match.updated                      = Spiel {0} gegen {1} aktualisiert!
 msg.negative.values.not.allowed        = Negative Werte sind nicht erlaubt!
 msg.user.profile.info.passwordChanged  = Passwort erfolgreich ge\u00E4ndert!
+msg.warn.no.statistics                 = Es liegen noch keine Statistikwerte vor!
 
 navigation.activeUserList    = angemeldete Benutzer
 navigation.administration    = Administration
