--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -175,7 +175,8 @@ ranking.noRankings = Es wurden noch keine Tipps abgegeben!
 
 rules.title = Regeln
 
-statistics.title = Statistik
+statistics.group.matches = Vorrunde
+statistics.title         = Punkte-Statistik
 
 upcoming.matches = anstehende Spiele
 
