--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -175,7 +175,8 @@ ranking.noRankings = No bets assigned!
 
 rules.title = Rules
 
-statistics.title = Statistic
+statistics.group.matches = group matches
+statistics.title         = points statistic
 
 upcoming.matches = Upcoming Matches
 
