show results from extra bets

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,13 +15,14 @@ all.matches = alle Spiele
 
 app.dateformat = EEE dd. MMMM yyyy HH:mm
 
-bet.edit.heading   = Tipp abgeben
-bet.edit.title     = Spieltipp
-bet.list.betted    = getippt
-bet.list.points    = Punkte
-bet.list.title     = Meine Spieletipps
-bet.listOpen.title = Noch nicht getippt
-bet.others.title   = Tipps der anderen...
+bet.edit.heading       = Tipp abgeben
+bet.edit.title         = Spieltipp
+bet.extra.others.title = Bonus-Tipps der anderen...
+bet.list.betted        = getippt
+bet.list.points        = Punkte
+bet.list.title         = Meine Spieletipps
+bet.listOpen.title     = Noch nicht getippt
+bet.others.title       = Tipps der anderen...
 
 buildinfo.title = Build Info
 
