--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,13 +15,14 @@ all.matches = All Matches
 
 app.dateformat = EEE dd MMMM yyyy HH:mm
 
-bet.edit.heading   = Enter bet
-bet.edit.title     = match bet
-bet.list.betted    = betted
-bet.list.points    = points
-bet.list.title     = My bettings
-bet.listOpen.title = matches to bet
-bet.others.title   = bets of the others...
+bet.edit.heading       = Enter bet
+bet.edit.title         = match bet
+bet.extra.others.title = bonus bets of the others...
+bet.list.betted        = betted
+bet.list.points        = points
+bet.list.title         = My bettings
+bet.listOpen.title     = matches to bet
+bet.others.title       = bets of the others...
 
 buildinfo.title = Build Info
 
