show bets of others

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -67,6 +67,8 @@ extra_bets.reachedPoints   = erzielte Punkte
 extra_bets.semiFinalWinner = Vize-Europameister
 extra_bets.title           = Europameister und Vize-Europameister tippen
 
+extrabet.bets.of.others = ... das haben die anderen getippt
+
 finals = Finalrunden
 
 group = Gruppe
