--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -67,6 +67,8 @@ extra_bets.reachedPoints   = reached points
 extra_bets.semiFinalWinner = vice-European champion
 extra_bets.title           = betting European champion and vice-European champion
 
+extrabet.bets.of.others = ... these are bets of the others
+
 finals = Final Matches
 
 group = Group
