--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -98,6 +98,11 @@ group.title.semiFinal        = Halbfinale
 
 groups = Gruppen
 
+image.upload.button     = Foto hochladen
+image.upload.msg.failed = Fehler beim Speichern des Fotos!
+image.upload.msg.saved  = Das Foto wurde erfolgreich gespeichert!
+image.upload.title      = Foto hochladen
+
 info.edit.title         = Info editieren
 info.misc.edit.button   = Sonstiges editieren
 info.msg.edit.saved     = Infos editiert!
