--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -98,6 +98,11 @@ group.title.semiFinal        = Semi Final
 
 groups = Groups
 
+image.upload.button     = upload image
+image.upload.msg.failed = Image Upload failed!
+image.upload.msg.saved  = The image has been saved successfully!
+image.upload.title      = Upload Image
+
 info.edit.title         = edit info
 info.misc.edit.button   = edit miscellaneous
 info.msg.edit.saved     = infos edited!
