update image gallery

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -98,6 +98,7 @@ group.title.semiFinal        = Halbfinale
 
 groups = Gruppen
 
+image.gallery.title          = Fotoalbum
 image.upload.button          = Foto hochladen
 image.upload.msg.failed      = Fehler beim Speichern des Fotos!
 image.upload.msg.noFileGiven = Bitte w\u00E4hlen Sie zun\u00E4chst eine Datei aus!
