bugfix random matches; bugfix spelling

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,14 +1,16 @@
 
 active.users.title = aktuell angemeldete Benutzer
 
-administration.createEmMatches             = EM 2016 Gruppenspiele anlegen
-administration.demoBetsAllUsers            = Testtipps f\u00FCr alle Benutzer anlegen
-administration.msg.info.demoBetsCreated    = Test-Tipps wurden erfolgreich angelegt!
-administration.msg.info.demoMatchesCreated = Testspiele wurden erfolgreich angelegt!
-administration.msg.info.demoResultsCreated = Testergebnisse erfolgreich erzeugt!
-administration.purgeOldActiveUsers         = \u00E4lter als 30 min l\u00F6schen
-administration.testResultsAllUsers         = Testergebnisse f\u00FCr alle Benutzer erzeugen
-administration.title                       = Administration
+administration.createEmMatches               = EM 2016 Gruppenspiele anlegen
+administration.createRandomMatches           = Zufallsspiele anlegen
+administration.demoBetsAllUsers              = Testtipps f\u00FCr alle Benutzer anlegen
+administration.msg.info.demoBetsCreated      = Test-Tipps wurden erfolgreich angelegt!
+administration.msg.info.demoMatchesCreated   = Testspiele wurden erfolgreich angelegt!
+administration.msg.info.demoResultsCreated   = Testergebnisse erfolgreich erzeugt!
+administration.msg.info.randomMatchesCreated = Zufallsspiele wurden erfolgreich angelegt!
+administration.purgeOldActiveUsers           = \u00E4lter als 30 min l\u00F6schen
+administration.testResultsAllUsers           = Testergebnisse f\u00FCr alle Benutzer erzeugen
+administration.title                         = Administration
 
 all.matches = alle Spiele
 
@@ -30,31 +32,31 @@ button.cancel = Abbrechen
 button.delete = L\u00F6schen
 button.save   = Speichern
 
-country.al           = Albanien
-country.at           = \u00D6sterreich
-country.be           = Belgien
-country.ch           = Schweiz
-country.cz           = Tschechien
-country.de           = Deutschland
-country.en           = England
-country.es           = Spanien
-country.fr           = Frankreich
-country.hr           = Kroatien
-country.hu           = Ungarn
-country.ie           = Irland
-country.is           = Island
-country.it           = Italien
-country.none         = -- Bitte w\u00E4hlen --
-country.north_irland = Nordirland
-country.pl           = Polen
-country.pt           = Portugal
-country.ro           = Rum\u00E4nien
-country.ru           = Russland
-country.se           = Schweden
-country.sk           = Slovakei
-country.tr           = T\u00FCrkei
-country.ua           = Ukraine
-country.wales        = Wales
+country.al            = Albanien
+country.at            = \u00D6sterreich
+country.be            = Belgien
+country.ch            = Schweiz
+country.cz            = Tschechien
+country.de            = Deutschland
+country.en            = England
+country.es            = Spanien
+country.fr            = Frankreich
+country.hr            = Kroatien
+country.hu            = Ungarn
+country.ie            = Irland
+country.is            = Island
+country.it            = Italien
+country.none          = -- Bitte w\u00E4hlen --
+country.north_ireland = Nordirland
+country.pl            = Polen
+country.pt            = Portugal
+country.ro            = Rum\u00E4nien
+country.ru            = Russland
+country.se            = Schweden
+country.sk            = Slovakei
+country.tr            = T\u00FCrkei
+country.ua            = Ukraine
+country.wales         = Wales
 
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
@@ -103,6 +105,7 @@ image.gallery.title          = Fotoalbum
 image.upload.button          = Foto hochladen
 image.upload.msg.failed      = Fehler beim Speichern des Fotos!
 image.upload.msg.noFileGiven = Bitte w\u00E4hlen Sie zun\u00E4chst eine Datei aus!
+image.upload.msg.noJpegImage = Es sind nur Fotos vom Typ JPEG erlaubt!
 image.upload.msg.saved       = Das Foto wurde erfolgreich gespeichert!
 image.upload.title           = Foto hochladen
 
