--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,14 +1,16 @@
 
 active.users.title = currently logged in users
 
-administration.createEmMatches             = create matches of EM 2016
-administration.demoBetsAllUsers            = create demo bets for all users
-administration.msg.info.demoBetsCreated    = Test bets created successfully!
-administration.msg.info.demoMatchesCreated = Test matches created successfully!
-administration.msg.info.demoResultsCreated = Test results created successfully!
-administration.purgeOldActiveUsers         = purge older than 30 min
-administration.testResultsAllUsers         = create demo results for all users
-administration.title                       = Administration
+administration.createEmMatches               = create matches of EM 2016
+administration.createRandomMatches           = create random matches
+administration.demoBetsAllUsers              = create demo bets for all users
+administration.msg.info.demoBetsCreated      = Test bets created successfully!
+administration.msg.info.demoMatchesCreated   = Test matches created successfully!
+administration.msg.info.demoResultsCreated   = Test results created successfully!
+administration.msg.info.randomMatchesCreated = created random matches successfully
+administration.purgeOldActiveUsers           = purge older than 30 min
+administration.testResultsAllUsers           = create demo results for all users
+administration.title                         = Administration
 
 all.matches = All Matches
 
@@ -30,31 +32,31 @@ button.cancel = cancel
 button.delete = delete
 button.save   = save
 
-country.al           = Albania
-country.at           = Austria
-country.be           = Belgium
-country.ch           = Switzerland
-country.cz           = Czech Republic
-country.de           = Germany
-country.en           = England
-country.es           = Spain
-country.fr           = France
-country.hr           = Croatia
-country.hu           = Hungary
-country.ie           = Ireland
-country.is           = Iceland
-country.it           = Italy
-country.none         = -- Please select --
-country.north_irland = North Ireland
-country.pl           = Poland
-country.pt           = Portugal
-country.ro           = Romania
-country.ru           = Russia
-country.se           = Sweden
-country.sk           = Slovakia
-country.tr           = Turkey
-country.ua           = Ukraine
-country.wales        = Wales
+country.al            = Albania
+country.at            = Austria
+country.be            = Belgium
+country.ch            = Switzerland
+country.cz            = Czech Republic
+country.de            = Germany
+country.en            = England
+country.es            = Spain
+country.fr            = France
+country.hr            = Croatia
+country.hu            = Hungary
+country.ie            = Ireland
+country.is            = Iceland
+country.it            = Italy
+country.none          = -- Please select --
+country.north_ireland = North Ireland
+country.pl            = Poland
+country.pt            = Portugal
+country.ro            = Romania
+country.ru            = Russia
+country.se            = Sweden
+country.sk            = Slovakia
+country.tr            = Turkey
+country.ua            = Ukraine
+country.wales         = Wales
 
 error.msg.unexpectedError = Unexpected error occured!
 error.title               = Error
@@ -103,6 +105,7 @@ image.gallery.title          = Image Gallery
 image.upload.button          = upload image
 image.upload.msg.failed      = Image Upload failed!
 image.upload.msg.noFileGiven = Please select a file before uploading!
+image.upload.msg.noJpegImage = Only file type JPEG is allowed!
 image.upload.msg.saved       = The image has been saved successfully!
 image.upload.title           = Upload Image
 
