--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -101,6 +101,7 @@ group.title.semiFinal        = Semi Final
 groups = Groups
 
 image.gallery.msg.deleted    = The image has been deleted!
+image.gallery.msg.noImages   = No saved images available!
 image.gallery.title          = Image Gallery
 image.upload.button          = upload image
 image.upload.msg.failed      = Image Upload failed!
