update image gallery

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,10 +27,11 @@ bet.others.title       = Tipps der anderen...
 
 buildinfo.title = Build Info
 
-button.back   = zur\u00FCck
-button.cancel = Abbrechen
-button.delete = L\u00F6schen
-button.save   = Speichern
+button.back              = zur\u00FCck
+button.backToImageUpload = Zur\u00FCck zum Foto Upload
+button.cancel            = Abbrechen
+button.delete            = L\u00F6schen
+button.save              = Speichern
 
 country.al            = Albanien
 country.at            = \u00D6sterreich
@@ -100,15 +101,19 @@ group.title.semiFinal        = Halbfinale
 
 groups = Gruppen
 
-image.gallery.msg.deleted    = Das Foto wurde gel\u00F6scht!
-image.gallery.msg.noImages   = Keine Fotos vorhanden!
-image.gallery.title          = Fotoalbum
-image.upload.button          = Foto hochladen
-image.upload.msg.failed      = Fehler beim Speichern des Fotos!
-image.upload.msg.noFileGiven = Bitte w\u00E4hlen Sie zun\u00E4chst eine Datei aus!
-image.upload.msg.noJpegImage = Es sind nur Fotos vom Typ JPEG erlaubt!
-image.upload.msg.saved       = Das Foto wurde erfolgreich gespeichert!
-image.upload.title           = Foto hochladen
+image.gallery.msg.deleted             = Das Foto wurde gel\u00F6scht!
+image.gallery.msg.noImages            = Keine Fotos vorhanden!
+image.gallery.title                   = Fotoalbum
+image.group.msg.added                 = Die Gruppe mit dem Namen {0} wurde hinzugef\u00FCgt!
+image.group.msg.deleted               = Die Gruppe wurde gel\u00F6scht!
+image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte l\u00F6schen Sie die Fotos zuerst!
+image.upload.button                   = Foto hochladen
+image.upload.msg.editGroup            = Gruppen bearbeiten
+image.upload.msg.failed               = Fehler beim Speichern des Fotos!
+image.upload.msg.noFileGiven          = Bitte w\u00E4hlen Sie zun\u00E4chst eine Datei aus!
+image.upload.msg.noJpegImage          = Es sind nur Fotos vom Typ JPEG erlaubt!
+image.upload.msg.saved                = Das Foto wurde erfolgreich gespeichert!
+image.upload.title                    = Foto hochladen
 
 info.edit.title         = Info editieren
 info.misc.edit.button   = Sonstiges editieren
