--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,10 +27,11 @@ bet.others.title       = bets of the others...
 
 buildinfo.title = Build Info
 
-button.back   = back
-button.cancel = cancel
-button.delete = delete
-button.save   = save
+button.back              = back
+button.backToImageUpload = Back to image upload
+button.cancel            = cancel
+button.delete            = delete
+button.save              = save
 
 country.al            = Albania
 country.at            = Austria
@@ -100,15 +101,19 @@ group.title.semiFinal        = Semi Final
 
 groups = Groups
 
-image.gallery.msg.deleted    = The image has been deleted!
-image.gallery.msg.noImages   = No saved images available!
-image.gallery.title          = Image Gallery
-image.upload.button          = upload image
-image.upload.msg.failed      = Image Upload failed!
-image.upload.msg.noFileGiven = Please select a file before uploading!
-image.upload.msg.noJpegImage = Only file type JPEG is allowed!
-image.upload.msg.saved       = The image has been saved successfully!
-image.upload.title           = Upload Image
+image.gallery.msg.deleted             = The image has been deleted!
+image.gallery.msg.noImages            = No saved images available!
+image.gallery.title                   = Image Gallery
+image.group.msg.added                 = The group with name {0} has been added!
+image.group.msg.deleted               = The group has been deleted!
+image.group.msg.deletionHasReferences = There are images already assigned to this group! Please delete these images first!
+image.upload.button                   = upload image
+image.upload.msg.editGroup            = edit groups
+image.upload.msg.failed               = Image Upload failed!
+image.upload.msg.noFileGiven          = Please select a file before uploading!
+image.upload.msg.noJpegImage          = Only file type JPEG is allowed!
+image.upload.msg.saved                = The image has been saved successfully!
+image.upload.title                    = Upload Image
 
 info.edit.title         = edit info
 info.misc.edit.button   = edit miscellaneous
