--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -104,15 +104,26 @@ groups = Groups
 image.gallery.msg.deleted             = The image has been deleted!
 image.gallery.msg.noImages            = No saved images available!
 image.gallery.title                   = Image Gallery
+image.group.button.delete             = delete group
+image.group.id                        = group id
 image.group.msg.added                 = The group with name {0} has been added!
 image.group.msg.deleted               = The group has been deleted!
 image.group.msg.deletionHasReferences = There are images already assigned to this group! Please delete these images first!
+image.group.name                      = group name
+image.group.title                     = image groups
 image.upload.button                   = upload image
+image.upload.deleteImage              = delete image
+image.upload.description              = description
+image.upload.editGroup                = edit groups
+image.upload.fileName                 = file name
+image.upload.groupName                = group name
+image.upload.id                       = Image ID
 image.upload.msg.editGroup            = edit groups
 image.upload.msg.failed               = Image Upload failed!
 image.upload.msg.noFileGiven          = Please select a file before uploading!
 image.upload.msg.noJpegImage          = Only file type JPEG is allowed!
 image.upload.msg.saved                = The image has been saved successfully!
+image.upload.thumbnail                = thumbnail
 image.upload.title                    = Upload Image
 
 info.edit.title         = edit info
