--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -104,15 +104,26 @@ groups = Gruppen
 image.gallery.msg.deleted             = Das Foto wurde gel\u00F6scht!
 image.gallery.msg.noImages            = Keine Fotos vorhanden!
 image.gallery.title                   = Fotoalbum
+image.group.button.delete             = Gruppe l\u00F6schen
+image.group.id                        = Gruppen ID
 image.group.msg.added                 = Die Gruppe mit dem Namen {0} wurde hinzugef\u00FCgt!
 image.group.msg.deleted               = Die Gruppe wurde gel\u00F6scht!
 image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte l\u00F6schen Sie die Fotos zuerst!
+image.group.name                      = Gruppenname
+image.group.title                     = Foto Gruppen
 image.upload.button                   = Foto hochladen
+image.upload.deleteImage              = Foto l\u00F6schen
+image.upload.description              = Beschreibung
+image.upload.editGroup                = Gruppen bearbeiten
+image.upload.fileName                 = Dateiname
+image.upload.groupName                = Gruppen Name
+image.upload.id                       = Foto ID
 image.upload.msg.editGroup            = Gruppen bearbeiten
 image.upload.msg.failed               = Fehler beim Speichern des Fotos!
 image.upload.msg.noFileGiven          = Bitte w\u00E4hlen Sie zun\u00E4chst eine Datei aus!
 image.upload.msg.noJpegImage          = Es sind nur Fotos vom Typ JPEG erlaubt!
 image.upload.msg.saved                = Das Foto wurde erfolgreich gespeichert!
+image.upload.thumbnail                = Vorschau
 image.upload.title                    = Foto hochladen
 
 info.edit.title         = Info editieren
