update image gallery

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -109,14 +109,14 @@ image.group.id                        = group id
 image.group.msg.added                 = The group with name {0} has been added!
 image.group.msg.deleted               = The group has been deleted!
 image.group.msg.deletionHasReferences = There are images already assigned to this group! Please delete these images first!
-image.group.name                      = group name
+image.group.name                      = group
 image.group.title                     = image groups
 image.upload.button                   = upload image
 image.upload.deleteImage              = delete image
 image.upload.description              = description
 image.upload.editGroup                = edit groups
 image.upload.fileName                 = file name
-image.upload.groupName                = group name
+image.upload.groupName                = group
 image.upload.id                       = Image ID
 image.upload.msg.editGroup            = edit groups
 image.upload.msg.failed               = Image Upload failed!
