--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -109,14 +109,14 @@ image.group.id                        = Gruppen ID
 image.group.msg.added                 = Die Gruppe mit dem Namen {0} wurde hinzugef\u00FCgt!
 image.group.msg.deleted               = Die Gruppe wurde gel\u00F6scht!
 image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte l\u00F6schen Sie die Fotos zuerst!
-image.group.name                      = Gruppenname
+image.group.name                      = Gruppe
 image.group.title                     = Foto Gruppen
 image.upload.button                   = Foto hochladen
 image.upload.deleteImage              = Foto l\u00F6schen
 image.upload.description              = Beschreibung
 image.upload.editGroup                = Gruppen bearbeiten
 image.upload.fileName                 = Dateiname
-image.upload.groupName                = Gruppen Name
+image.upload.groupName                = Gruppe
 image.upload.id                       = Foto ID
 image.upload.msg.editGroup            = Gruppen bearbeiten
 image.upload.msg.failed               = Fehler beim Speichern des Fotos!
