--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -123,6 +123,7 @@ image.upload.msg.failed               = Fehler beim Speichern des Fotos!
 image.upload.msg.noFileGiven          = Bitte w\u00E4hlen Sie zun\u00E4chst eine Datei aus!
 image.upload.msg.noJpegImage          = Es sind nur Fotos vom Typ JPEG erlaubt!
 image.upload.msg.saved                = Das Foto wurde erfolgreich gespeichert!
+image.upload.rotate                   = Ratation
 image.upload.thumbnail                = Vorschau
 image.upload.title                    = Foto hochladen
 
