--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -123,6 +123,7 @@ image.upload.msg.failed               = Image Upload failed!
 image.upload.msg.noFileGiven          = Please select a file before uploading!
 image.upload.msg.noJpegImage          = Only file type JPEG is allowed!
 image.upload.msg.saved                = The image has been saved successfully!
+image.upload.rotate                   = rotation
 image.upload.thumbnail                = thumbnail
 image.upload.title                    = Upload Image
 
