added cross links

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -104,6 +104,7 @@ groups = Gruppen
 image.gallery.msg.deleted             = Das Foto wurde gel\u00F6scht!
 image.gallery.msg.noImages            = Keine Fotos vorhanden!
 image.gallery.title                   = Fotoalbum
+image.gallery.toUploadImagePage       = weitere Fotos hochladen
 image.group.button.delete             = Gruppe l\u00F6schen
 image.group.id                        = Gruppen ID
 image.group.msg.added                 = Die Gruppe mit dem Namen {0} wurde hinzugef\u00FCgt!
@@ -126,6 +127,7 @@ image.upload.msg.saved                = Das Foto wurde erfolgreich gespeichert!
 image.upload.rotate                   = Ratation
 image.upload.thumbnail                = Vorschau
 image.upload.title                    = Foto hochladen
+image.upload.toImageGallery           = zum Fotoalbum
 
 info.edit.title         = Info editieren
 info.misc.edit.button   = Sonstiges editieren
