--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -104,6 +104,7 @@ groups = Groups
 image.gallery.msg.deleted             = The image has been deleted!
 image.gallery.msg.noImages            = No saved images available!
 image.gallery.title                   = Image Gallery
+image.gallery.toUploadImagePage       = add more images
 image.group.button.delete             = delete group
 image.group.id                        = group id
 image.group.msg.added                 = The group with name {0} has been added!
@@ -126,6 +127,7 @@ image.upload.msg.saved                = The image has been saved successfully!
 image.upload.rotate                   = rotation
 image.upload.thumbnail                = thumbnail
 image.upload.title                    = Upload Image
+image.upload.toImageGallery           = to image gallery
 
 info.edit.title         = edit info
 info.misc.edit.button   = edit miscellaneous
