du not save original file name; added unique index for group name

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -116,7 +116,7 @@ image.upload.button                   = Foto hochladen
 image.upload.deleteImage              = Foto l\u00F6schen
 image.upload.description              = Beschreibung
 image.upload.editGroup                = Gruppen bearbeiten
-image.upload.fileName                 = Dateiname
+image.upload.file                     = Datei
 image.upload.groupName                = Gruppe
 image.upload.id                       = Foto ID
 image.upload.msg.editGroup            = Gruppen bearbeiten
