--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -116,7 +116,7 @@ image.upload.button                   = upload image
 image.upload.deleteImage              = delete image
 image.upload.description              = description
 image.upload.editGroup                = edit groups
-image.upload.fileName                 = file name
+image.upload.file                     = file
 image.upload.groupName                = group
 image.upload.id                       = Image ID
 image.upload.msg.editGroup            = edit groups
