--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -101,6 +101,7 @@ group.title.semiFinal        = Halbfinale
 
 groups = Gruppen
 
+image.gallery.downloadAll             = Alle Fotos herunterladen.
 image.gallery.msg.deleted             = Das Foto wurde gel\u00F6scht!
 image.gallery.msg.noImages            = Keine Fotos vorhanden!
 image.gallery.title                   = Fotoalbum
