added groups for world championship

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -76,6 +76,7 @@ finals = Finalrunden
 group = Gruppe
 
 group.entry.FINAL            = Finale
+group.entry.GAME_FOR_THIRD   = Spiel um den 3. Platz
 group.entry.GROUP_A          = Gruppe A
 group.entry.GROUP_B          = Gruppe B
 group.entry.GROUP_C          = Gruppe C
@@ -94,7 +95,10 @@ group.title.C                = Gruppe C
 group.title.D                = Gruppe D
 group.title.E                = Gruppe E
 group.title.F                = Gruppe F
+group.title.G                = Gruppe G
+group.title.H                = Gruppe H
 group.title.final            = Finale
+group.title.gameForThird     = Spiel um den 3. Platz
 group.title.quarterFinal     = Viertelfinale
 group.title.roundOfSixteen   = Achtelfinale
 group.title.semiFinal        = Halbfinale
