--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -76,6 +76,7 @@ finals = Final Matches
 group = Group
 
 group.entry.FINAL            = Final
+group.entry.GAME_FOR_THIRD   = Game for Third
 group.entry.GROUP_A          = Group A
 group.entry.GROUP_B          = Group B
 group.entry.GROUP_C          = Group C
@@ -94,7 +95,10 @@ group.title.C                = Group C
 group.title.D                = Group D
 group.title.E                = Group E
 group.title.F                = Group F
+group.title.G                = Group G
+group.title.H                = Group H
 group.title.final            = Final
+group.title.gameForThird     = Game for Third
 group.title.quarterFinal     = Quarter Final
 group.title.roundOfSixteen   = Round of Sixteen
 group.title.semiFinal        = Semi Final
