--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -35,6 +35,7 @@ button.save              = Speichern
 
 country.al            = Albanien
 country.at            = \u00D6sterreich
+country.au            = Australien
 country.be            = Belgien
 country.ch            = Schweiz
 country.cz            = Tschechien
