--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -35,6 +35,7 @@ button.save              = save
 
 country.al            = Albania
 country.at            = Austria
+country.au            = Australia
 country.be            = Belgium
 country.ch            = Switzerland
 country.cz            = Czech Republic
