--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -215,7 +215,7 @@ country.swz           = Swaziland
 country.syr           = Syrien
 country.tah           = Tahiti
 country.tan           = Tanzania
-country.tca           = Turks und Caicos Inseln
+country.tca           = Turks und Caicos
 country.tga           = Tonga
 country.tha           = Thailand
 country.tjk           = Tajikistan
