--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -215,7 +215,7 @@ country.swz           = Swaziland
 country.syr           = Syria
 country.tah           = Tahiti
 country.tan           = Tanzania
-country.tca           = Turks and Caicos Islands
+country.tca           = Turks and Caicos
 country.tga           = Tonga
 country.tha           = Thailand
 country.tjk           = Tajikistan
