--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,7 +44,7 @@ country.arm           = Armenien
 country.aru           = Aruba
 country.asa           = Amerikanisch Samoa
 country.at            = \u00D6sterreich
-country.atg           = Antigua und Barbuda
+country.atg           = Antigua + Barbuda
 country.au            = Australien
 country.aze           = Azerbaijan
 country.bah           = Bahamas
@@ -94,9 +94,11 @@ country.dom           = Dominikanische Republik
 country.ecu           = Ecuador
 country.en            = England
 country.eqg           = \u00C4quatorial-Guinea
+country.eqy           = \u00C4gypten
 country.eri           = Eritrea
 country.es            = Spanien
 country.est           = Estland
+country.eth           = \u00C4thiopien
 country.fij           = Fiji
 country.fin           = Finland
 country.fr            = Frankreich
