--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -44,7 +44,7 @@ country.arm           = Armenia
 country.aru           = Aruba
 country.asa           = American Samoa
 country.at            = Austria
-country.atg           = Antigua and Barbuda
+country.atg           = Antigua + Barbuda
 country.au            = Australia
 country.aze           = Azerbaijan
 country.bah           = Bahamas
@@ -94,9 +94,11 @@ country.dom           = Dominican Republic
 country.ecu           = Ecuador
 country.en            = England
 country.eqg           = Equatorial Guinea
+country.eqy           = Egypt
 country.eri           = Eritrea
 country.es            = Spain
 country.est           = Estonia
+country.eth           = Ethiopia
 country.fij           = Fiji
 country.fin           = Finland
 country.fr            = France
