added country service test

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -92,9 +92,9 @@ country.dji           = Dschibuti
 country.dma           = Dominica
 country.dom           = Dominikanische Republik
 country.ecu           = Ecuador
+country.egy           = \u00C4gypten
 country.en            = England
 country.eqg           = \u00C4quatorial-Guinea
-country.eqy           = \u00C4gypten
 country.eri           = Eritrea
 country.es            = Spanien
 country.est           = Estland
