--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -92,9 +92,9 @@ country.dji           = Djibouti
 country.dma           = Dominica
 country.dom           = Dominican Republic
 country.ecu           = Ecuador
+country.egy           = Egypt
 country.en            = England
 country.eqg           = Equatorial Guinea
-country.eqy           = Egypt
 country.eri           = Eritrea
 country.es            = Spain
 country.est           = Estonia
