bugfix sorting countries

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -79,7 +79,7 @@ country.cod           = Kongo DR
 country.cok           = Cook-Inseln
 country.col           = Kolumbien
 country.com           = Comoros
-country.cpv           = kapverdische Inseln
+country.cpv           = Kap Verde
 country.crc           = Costa Rica
 country.cta           = Zentralafrikanische Republik
 country.cub           = Kuba
