--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -79,7 +79,7 @@ country.cod           = Congo DR
 country.cok           = Cook Islands
 country.col           = Colombia
 country.com           = Comoros
-country.cpv           = Cape Verde Islands
+country.cpv           = Cape Verde
 country.crc           = Costa Rica
 country.cta           = Central African Republic
 country.cub           = Cuba
