--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -194,7 +194,7 @@ country.rsa           = S\u00FCdafrika
 country.ru            = Russland
 country.rwa           = Rwanda
 country.sam           = Samoa
-country.sco           = Scotland
+country.sco           = Schottland
 country.sdn           = Sudan
 country.se            = Schweden
 country.sen           = Senegal
