added language selector

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -226,7 +226,7 @@ country.tls           = Timor Leste
 country.tog           = Togo
 country.tpe           = Chinese Taipei
 country.tr            = T\u00FCrkei
-country.tri           = Trinidad und Tobago
+country.tri           = Trinidad + Tobago
 country.tun           = Tunesien
 country.ua            = Ukraine
 country.uae           = Vereinigte Arabische Emirate
@@ -325,6 +325,9 @@ info.misc.edit.button   = Sonstiges editieren
 info.msg.edit.saved     = Infos editiert!
 info.prices.edit.button = Preise editieren
 info.rules.edit.button  = Regeln editieren
+
+language.de = deutsch
+language.en = englisch
 
 login.button.login         = Anmelden
 login.msg.error            = Ung\u00FCltiger Benutzername oder Passwort!
