--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -226,7 +226,7 @@ country.tls           = Timor Leste
 country.tog           = Togo
 country.tpe           = Chinese Taipei
 country.tr            = Turkey
-country.tri           = Trinidad and Tobago
+country.tri           = Trinidad + Tobago
 country.tun           = Tunisia
 country.ua            = Ukraine
 country.uae           = United Arab Emirates
@@ -325,6 +325,9 @@ info.misc.edit.button   = edit miscellaneous
 info.msg.edit.saved     = infos edited!
 info.prices.edit.button = edit winnings
 info.rules.edit.button  = edit rules
+
+language.de = german
+language.en = english
 
 login.button.login         = Login
 login.msg.error            = Invalid username or password!
